--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,13 @@
-- REST api for keras (flask)
+- REST api(flask)
 - graphql api 
-- keras wrapper use in api (use builder design pattern (to build network))
+- keras wrapper
 - add some layer between api and wrapper (message broker? Queues?) (?)
 - front-end (graphs etc.)
 - documentation (generated)
 - dockerize it
 - jenkins pipeline
 - unit tests 
-- selenium front end tests 
+- selenium front-end tests
+- api tests
+- desktop app 
+- mobile app
