--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,8 @@
 - keras wrapper
 - add some layer between api and wrapper (message broker? Queues?) (?)
 - front-end (graphs etc.)
-- documentation (generated)
+- documentation (generated)(python and typescritp)
+- api documentation witch swaget 
 - dockerize it
 - jenkins pipeline
 - unit tests 
