fix data synhronization

--- a/todo.txt
+++ b/todo.txt
@@ -8,12 +8,9 @@
 - dockerize it
 - jenkins pipeline
 - unit tests 
-- selenium front-end tests
+- selenium (use selenoid)front-end tests
 - api tests
 - desktop app 
 - mobile app
 
 
-_______________
-Next steps:
-wraper (more instances with shared data) -> message brocker layer -> api 
