--- a/todo.txt
+++ b/todo.txt
@@ -8,7 +8,7 @@
 - dockerize it
 - jenkins pipeline
 - unit tests 
-- selenium (use selenoid)front-end tests
+- selenium (use selenoid) front-end tests
 - api tests
 - desktop app 
 - mobile app
@@ -16,3 +16,11 @@
 
 -------------------------
 add possibility to choose layer type
+
+kubernetes:
+5 pods:
+ - node
+ - api
+ - dashboard
+ - nats
+ - mongodb
