--- a/todo.txt
+++ b/todo.txt
@@ -17,7 +17,6 @@
 
 -------------------------
 
-
 kubernetes:
 5 pods:
  - node
@@ -27,13 +26,17 @@ kubernetes:
  - mongodb
 
 frontend:
- - display network status on network lists
- - display layers in network details
+ - display layers info (more readable) in network details
+ - back button
 
 other:
  - clear logs and temp files
  - node data synchronisation may cause memory leak
  - probably wont work for more nodes yet
  - better handle backend errors
+ - try use Numba JIT (in data utils ?)
+ - use terafrom(or something else) to set-up linuks VM (jenkins slave)
+
 tests:
  - extend front end tests
+    
